--- a/edu.dhbw.andobjviewer.ModelChooser/res/layout/instructions_layout.xml
+++ b/edu.dhbw.andobjviewer.ModelChooser/res/layout/instructions_layout.xml
@@ -4,6 +4,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/goback" />
+
 <WebView
         android:id="@+id/instructions_webview"
         android:layout_width="fill_parent" 
